--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": "tsbuf",
   "scripts": {
     "build": "rimraf dist && gulp build copy",
-    "install": "rimraf dist && gulp build copy",
+    "postinstall": "node_modules/.bin/gulp build copy",
     "lint": "run-s lint:prettier lint:tslint",
     "lint:prettier": "prettier-check '{src,test}/**/*.ts'",
     "lint:tslint": "tslint -t stylish -p .",
