--- a/package.json
+++ b/package.json
@@ -54,7 +54,15 @@
     "@types/node": "^10.12.0",
     "@types/pegjs": "^0.10.1",
     "@types/prettier": "^1.13.2",
-    "@types/sinon": "^5.0.5",
+    "@types/sinon": "^5.0.5"
+  },
+  "dependencies": {
+    "chalk": "^2.4.1",
+    "execute-me": "^0.2.0",
+    "file": "^0.2.2",
+    "mkdirp": "^0.5.1",
+    "pegjs": "^0.10.0",
+    "prettier": "^1.15.2",
     "chai": "^4.2.0",
     "coveralls": "^3.0.2",
     "gulp": "^3.9.1",
@@ -72,14 +80,6 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "typescript": "^3.1.3"
-  },
-  "dependencies": {
-    "chalk": "^2.4.1",
-    "execute-me": "^0.2.0",
-    "file": "^0.2.2",
-    "mkdirp": "^0.5.1",
-    "pegjs": "^0.10.0",
-    "prettier": "^1.15.2"
   },
   "jest": {
     "collectCoverage": true,
