files 프로퍼티 재추가

--- a/package.json
+++ b/package.json
@@ -97,5 +97,9 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
-  }
+  },
+  "files": [
+    "dist",
+    "tsbuf"
+  ]
 }
