--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsbuf",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Generate TypeScript enum and interface with proto buffer.",
   "main": "dist/index.js",
   "bin": "tsbuf",
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.6",
     "@types/jest": "^23.3.7",
+    "@types/lodash": "^4.14.136",
     "@types/mkdirp": "^0.5.2",
     "@types/node": "^10.12.0",
     "@types/pegjs": "^0.10.1",
@@ -52,22 +53,23 @@
     "@types/sinon": "^5.0.5"
   },
   "dependencies": {
+    "chai": "^4.2.0",
     "chalk": "^2.4.1",
+    "coveralls": "^3.0.2",
     "execute-me": "^0.2.0",
     "file": "^0.2.2",
-    "mkdirp": "^0.5.1",
-    "pegjs": "^0.10.0",
-    "prettier": "^1.15.2",
-    "chai": "^4.2.0",
-    "coveralls": "^3.0.2",
     "gulp": "^3.9.1",
     "gulp-typescript": "^5.0.0-alpha.3",
     "husky": "^1.2.0",
     "jest": "^23.6.0",
     "lint-staged": "^8.1.0",
+    "lodash": "^4.17.15",
+    "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "np": "^3.0.4",
     "npm-run-all": "^4.1.5",
+    "pegjs": "^0.10.0",
+    "prettier": "^1.15.2",
     "prettier-check": "^2.0.0",
     "rimraf": "^2.6.2",
     "sinon": "^7.1.0",
